<resources>
    <integer name="font_size">20</integer>
    <string name="app_name">Simple Notes App</string>
    <string name="notas_guardadas">Saved Notes:</string>
    <string name="guardar">Save</string>
    <string name="nota_guardada">Nota Guardada</string>
    <string name="sugerencia">Write a note here!</string>
    <string name="cero">0</string>
    <string name="lista_vacia">Empty List</string>
    <string name="limpiar">Clear</string>
    <string name="scroll">Scroll for more notes</string>
    <string name="app_name_title">SimpleNotes App</string>
    <string name="agregar_nota">Agregar Nota</string>
    <string name="lista_vacia_sugerencia">Lista vacia.\nAgregue Notas con el Boton +</string>
    <string name="guardar_nota">Guardar nota</string>
    <string name="cuerpo_nota_hint">Escriba aqui su nota!!!</string>
    <string name="titulo_nota_hint">Escriba aqui el titulo de su nota</string>
</resources>